--- a/package.json
+++ b/package.json
@@ -1,21 +1,31 @@
 {
-  "name": "redux-asyncstorage",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "expo": "~48.0.11",
-    "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.6"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0"
-  },
-  "private": true
+	"name": "redux-asyncstorage",
+	"version": "1.0.0",
+	"main": "node_modules/expo/AppEntry.js",
+	"scripts": {
+		"start": "expo start",
+		"android": "expo start --android",
+		"ios": "expo start --ios",
+		"web": "expo start --web"
+	},
+	"dependencies": {
+		"@react-native-async-storage/async-storage": "^1.18.1",
+		"@react-navigation/bottom-tabs": "^6.5.7",
+		"@react-navigation/native": "^6.1.6",
+		"@react-navigation/native-stack": "^6.9.12",
+		"@reduxjs/toolkit": "^1.9.5",
+		"expo": "~48.0.11",
+		"expo-device": "~5.2.1",
+		"expo-notifications": "~0.18.1",
+		"expo-status-bar": "~1.4.4",
+		"react": "18.2.0",
+		"react-native": "0.71.6",
+		"react-native-safe-area-context": "4.5.0",
+		"react-native-screens": "~3.20.0",
+		"react-redux": "^8.0.5"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.20.0"
+	},
+	"private": true
 }
